syntax = "proto3";

service AccountService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (TokenValidationRequest) returns (TokenValidationResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  bool success = 1;
  string error_message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string jwt_token = 2;
  string error_message = 3;
}

message TokenValidationRequest {
  string jwt_token = 1;
}

message TokenValidationResponse {
  bool is_valid = 1;
  string username = 2;
}